fix: small spacing error

--- a/frontend/src/styles/Settings.scss
+++ b/frontend/src/styles/Settings.scss
@@ -13,8 +13,8 @@
     top: 0px;
 
     & > #username {
-      margin-top: 2vh;
-      margin-bottom: 1vh;
+      margin-top: 1.5vh;
+      margin-bottom: 1.5vh;
       font-weight: 600;
       font-size: clamp(25px, 4vmin, 60px);
     }
